feat: add pl lang

--- a/PL/about.html
+++ b/PL/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="../about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
   <body>
     <header>
       <span class="logo">
-        <img class="logo-img" src="./src/img/Logo.png" alt="" />
+        <img class="logo-img" src="../src/img/Logo.png" alt="" />
         <a href="index.html" class="logo-text">Ukospedition</a>
       </span>
       <div class="menu__mobile">
@@ -35,69 +35,71 @@
         <nav class="header-nav">
           <ul>
             <li class="nav-list-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Strona główna</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="#">O nas</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services.html">Usługi</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="career.html">Careers</a>
+              <a class="nav-link" href="career.html">Kariera</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="contact.html">Contact us</a>
+              <a class="nav-link" href="contact.html">Skontaktuj się z nami</a>
             </li>
           </ul>
         </nav>
         <div class="nav-lang">
-          <a href="#" class="nav-lang-link active-lang">EN</a>
-          <a href="PL/about.html" class="nav-lang-link">PL</a>
+          <a href="../about.html" class="nav-lang-link">EN</a>
+          <a href="#" class="nav-lang-link active-lang">PL</a>
         </div>
       </div>
     </header>
     <main>
       <section class="about-hero">
-        <h1 class="title about-title wrapper">About Us</h1>
+        <h1 class="title about-title wrapper">O nas</h1>
       </section>
       <section class="about-us">
         <div class="about-us-container wrapper">
           <div class="about-us-img-container">
             <img
-              src="./src/img/about-us-img-big.jpg"
+              src="../src/img/about-us-img-big.jpg"
               alt=""
               class="about-us-big-img"
             />
             <img
-              src="./src/img/about-us-img-small.jpg"
+              src="../src/img/about-us-img-small.jpg"
               alt=""
               class="about-us-small-img"
             />
           </div>
           <div class="about-us-content">
-            <span class="label about-us-label">Transportation company</span>
-            <h2 class="about-us-title title">Driving success forward</h2>
+            <span class="label about-us-label">FIRMA TRANSPORTOWA</span>
+            <h2 class="about-us-title title">Napędzamy sukces do przodu</h2>
             <p class="about-us-descript">
-              At UKOSpedition, we are dedicated to providing reliable,
-              efficient, and innovative transportation and logistics solutions.
+              W UKOspedition angażujemy się w dostarczanie niezawodnych,
+              wydajnych i innowacyjnych rozwiązań transportowych i
+              logistycznych.
             </p>
             <p class="about-us-info">
-              With our expertise, timely deliveries, and personalized service,
-              we ensure your freight moves smoothly every time.
+              Dzięki naszej wiedzy, terminowym dostawom i spersonalizowanej
+              obsłudze zapewniamy płynny transport Twojego ładunku za każdym
+              razem.
             </p>
             <div class="about-us-our-container">
               <span class="about-us-our-title">Our Mission</span>
               <p class="about-us-our-descript">
-                To deliver seamless and cost-effective logistics solutions while
-                maintaining the highest standards of reliability, efficiency,
-                and customer satisfaction. We strive to simplify transportation
-                challenges and build long-term partnerships through trust and
-                excellence.
+                Dostarczanie płynnych i opłacalnych rozwiązań logistycznych przy
+                jednoczesnym utrzymaniu najwyższych standardów niezawodności,
+                wydajności i satysfakcji klienta. Dążymy do uproszczenia wyzwań
+                transportowych i budowania długoterminowych partnerstw opartych
+                na zaufaniu i doskonałości.
               </p>
             </div>
             <div class="about-us-our-container">
-              <span class="about-us-our-title">Our Vision </span>
+              <span class="about-us-our-title">Nasza misja</span>
               <p class="about-us-our-descript">
                 To be a leading global logistics provider, setting the benchmark
                 for innovation, sustainability, and exceptional service in the
@@ -105,7 +107,7 @@
               </p>
             </div>
             <img
-              src="./src/img/about-us-arrow.png"
+              src="../src/img/about-us-arrow.png"
               alt=""
               class="about-us-arrow"
             />
@@ -113,50 +115,50 @@
         </div>
       </section>
       <section class="choose-us">
-        <h2 class="title choose-us-title">Why Choose Us?</h2>
+        <h2 class="title choose-us-title">Dlaczego warto nas wybrać?</h2>
         <div class="choose-card-container wrapper">
           <div class="choose-us-card">
             <img
-              src="./src/img/delivery-icon.png"
+              src="../src/img/delivery-icon.png"
               alt=""
               class="choose-us-card-img"
             />
             <p class="choose-us-card-text">
-              On-Time <br />
-              Deliveries
+              Terminowe <br />
+              Dostawy
             </p>
           </div>
           <div class="choose-us-card">
             <img
-              src="./src/img/support-icon.png"
+              src="../src/img/support-icon.png"
               alt=""
               class="choose-us-card-img"
             />
             <p class="choose-us-card-text">
-              24/7 <br />
-              Support
+              Całodobowe <br />
+              wsparcie
             </p>
           </div>
           <div class="choose-us-card">
             <img
-              src="./src/img/real-time-icon.png"
+              src="../src/img/real-time-icon.png"
               alt=""
               class="choose-us-card-img"
             />
             <p class="choose-us-card-text">
-              Real Time <br />
-              Tracking
+              Śledzenie w czasie <br />
+              rzeczywistym
             </p>
           </div>
           <div class="choose-us-card">
             <img
-              src="./src/img/transit-time-icon.png"
+              src="../src/img/transit-time-icon.png"
               alt=""
               class="choose-us-card-img"
             />
             <p class="choose-us-card-text">
-              Reduced <br />
-              Transit Time
+              Skrócony<br />
+              czas tranzytu
             </p>
           </div>
         </div>
@@ -164,15 +166,17 @@
       <section class="feedback">
         <div class="opportunity-contact">
           <p class="opportunity-contact-descript semi-title">
-            Trusted transportation company
+            Zaufana firma transportowa
           </p>
           <img
-            src="./src/img/manager-icon.png"
+            src="../src/img/manager-icon.png"
             alt=""
             class="opportunity-contact-img"
           />
           <div class="opportunity-contact-info">
-            <span class="opportunity-contact-text">Get professional help</span>
+            <span class="opportunity-contact-text"
+              >Uzyskaj profesjonalną pomoc</span
+            >
             <a
               href="tel:+48575831810"
               class="opportunity-contact-number semi-title"
@@ -181,12 +185,16 @@
           </div>
         </div>
         <div class="feedback-content">
-          <span class="feedback-label label">Get in touch with us anytime</span>
+          <span class="feedback-label label"
+            >Skontaktuj się z nami w dowolnym momencie</span
+          >
           <h2 class="title feedback-title">
-            Looking for fast and <br />
-            efficient transport solutions?
+            Szukasz szybkich i <br />
+            wydajnych rozwiązań transportowych?
           </h2>
-          <button class="btn feedback-btn" id="openModal">Get a quote</button>
+          <button class="btn feedback-btn" id="openModal">
+            UZYSKAJ WYCENĘ
+          </button>
         </div>
       </section>
     </main>
@@ -194,9 +202,9 @@
       <div class="footer-wrapper">
         <div class="footer-cards">
           <div class="card-footer">
-            <img src="./src/img/location.png" alt="" class="card-footer-img" />
+            <img src="../src/img/location.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Addres</p>
+              <p class="card-footer-category">Adres</p>
               <p class="card-footer-text">
                 Powstańców 97, 05-870<br />
                 Błonie Poland
@@ -204,9 +212,9 @@
             </div>
           </div>
           <div class="card-footer">
-            <img src="./src/img/mobile.png" alt="" class="card-footer-img" />
+            <img src="../src/img/mobile.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Contact</p>
+              <p class="card-footer-category">Kontakt</p>
               <p class="card-footer-text">
                 ukospedition@ukospedition.com <br />
                 +48 57 583 18 10
@@ -214,12 +222,12 @@
             </div>
           </div>
           <div class="card-footer">
-            <img src="./src/img/timing.png" alt="" class="card-footer-img" />
+            <img src="../src/img/timing.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Timing</p>
+              <p class="card-footer-category">Godziny otwarcia</p>
               <p class="card-footer-text">
-                Mon - Sat: 8 am - 5 pm, <br />
-                Sunday: CLOSED
+                Pon – Sob 8:00 – 17:00, <br />
+                Niedziela: ZAMKNIĘTE
               </p>
             </div>
           </div>
@@ -227,7 +235,7 @@
         <div class="footer-content">
           <div class="footer-company">
             <a href="" class="footer-logo">
-              <img src="./src/img/Logo.png" alt="" class="footer-logo-img" />
+              <img src="../src/img/Logo.png" alt="" class="footer-logo-img" />
               <span class="footer-logo-text">UKOSpedition</span>
             </a>
             <p class="footer-company-descript">
@@ -235,42 +243,46 @@
               challenges and creating new ones in <br />
               advertising sector. -->
             </p>
-            <a href="about.html" class="footer-compant-btn btn">Read more</a>
+            <a href="about.html" class="footer-compant-btn btn"
+              >CZYTAJ WIĘCEJ</a
+            >
           </div>
           <div class="footer-services">
-            <h5 class="footer-section-title">Services</h5>
+            <h5 class="footer-section-title">Usługi</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="#" class="footer-list-link"> About Us </a>
+                <a href="#" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="career.html" class="footer-list-link">Our Team </a>
+                <a href="career.html" class="footer-list-link">Nasz zespół</a>
               </li>
               <li class="footer-list-item">
-                <a href="contact.html" class="footer-list-link">Contact Us </a>
+                <a href="contact.html" class="footer-list-link"
+                  >Skontaktuj się z nami</a
+                >
               </li>
             </ul>
           </div>
           <div class="footer-links">
-            <h5 class="footer-section-title">Useful Links</h5>
+            <h5 class="footer-section-title">Przydatne linki</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="#" class="footer-list-link">About </a>
+                <a href="about.html" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="contact.html" class="footer-list-link"> Contact </a>
+                <a href="contact.html" class="footer-list-link">Kontakt</a>
               </li>
 
               <li class="footer-list-item">
-                <a href="services.html" class="footer-list-link">Services </a>
+                <a href="services.html" class="footer-list-link">Usługi</a>
               </li>
             </ul>
           </div>
           <div class="footer-newsletter">
             <h5 class="footer-section-title">Newsletter</h5>
             <p class="footer-newsletter-descript">
-              Subscribe our newsletter to get our latest <br />
-              update & news
+              Zapisz się do naszego newslettera, aby otrzymywać najnowsze <br />
+              aktualizacje i wiadomości
             </p>
             <form action="" class="footer-newsletter-form">
               <input
@@ -412,22 +424,22 @@
     <div id="modal" class="modal">
       <div class="modal-content">
         <span class="close-btn" id="closeModal">&times;</span>
-        <h2>Request a Quote</h2>
+        <h2>Poproś o wycenę</h2>
         <form class="form-rows">
           <!-- Row 1: Email -->
           <div class="form-row">
-            <label for="email">Your Email:</label>
+            <label for="email">Twój e-mail:</label>
             <input type="email" id="email" name="email" required />
           </div>
 
           <!-- Row 2: Name and Phone -->
           <div class="form-row">
             <div class="form-group">
-              <label for="name">Your Name:</label>
+              <label for="name">Twoje imię:</label>
               <input type="text" id="name" name="name" required />
             </div>
             <div class="form-group">
-              <label for="phone">Phone No:</label>
+              <label for="phone">Numer telefonu:</label>
               <input type="tel" id="phone" name="phone" required />
             </div>
           </div>
@@ -435,11 +447,11 @@
           <!-- Row 3: Departure and Deliver -->
           <div class="form-row">
             <div class="form-group">
-              <label for="departure">Departure:</label>
+              <label for="departure">Miejsce wyjazdu:</label>
               <input type="text" id="departure" name="departure" required />
             </div>
             <div class="form-group">
-              <label for="deliver">Deliver:</label>
+              <label for="deliver">Miejsce dostawy:</label>
               <input type="text" id="deliver" name="deliver" required />
             </div>
           </div>
@@ -448,11 +460,11 @@
 
           <!-- Row 5: Submit Button -->
           <div class="form-row">
-            <button type="submit" class="btn submit">Submit Request</button>
+            <button type="submit" class="btn submit">Prześlij prośbę</button>
           </div>
         </form>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
