--- a/PL/contact.html
+++ b/PL/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="../contact.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +27,7 @@
   <body>
     <header>
       <span class="logo">
-        <img class="logo-img" src="./src/img/Logo.png" alt="" />
+        <img class="logo-img" src="../src/img/Logo.png" alt="" />
         <a href="index.html" class="logo-text">Ukospedition</a>
       </span>
       <div class="menu__mobile">
@@ -39,59 +39,59 @@
         <nav class="header-nav">
           <ul>
             <li class="nav-list-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Strona główna</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="about.html">About us</a>
+              <a class="nav-link" href="about.html">O nas</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" href="services.html">Usługi</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="career.html">Careers</a>
+              <a class="nav-link" href="career.html">Kariera</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="#">Skontaktuj się z nami</a>
             </li>
           </ul>
         </nav>
         <div class="nav-lang">
-          <a href="#" class="nav-lang-link active-lang">EN</a>
-          <a href="PL/contact.html" class="nav-lang-link">PL</a>
+          <a href="../contact.html" class="nav-lang-link">EN</a>
+          <a href="#" class="nav-lang-link active-lang">PL</a>
         </div>
       </div>
     </header>
     <main>
       <section class="services-hero">
-        <h1 class="title services-title wrapper">Contact Us</h1>
+        <h1 class="title services-title wrapper">Skontaktuj się z nami</h1>
       </section>
       <section class="contact-us">
         <div class="contact-us-wrapper">
-          <h2 class="contact-us-title">Contact Us Today</h2>
+          <h2 class="contact-us-title">Skontaktuj się z nami już dziś</h2>
           <p class="contact-us-descript">
-            Got a question? Send us a message or visit us
+            Masz pytanie? Wyślij nam wiadomość lub odwiedź nas
           </p>
           <div class="contact-us-content">
             <div class="contact-us-cards">
               <div class="contact-us-card">
                 <img
-                  src="./src/img/contact-us-phone.png"
+                  src="../src/img/contact-us-phone.png"
                   alt=""
                   class="contact-us-card-img"
                 />
                 <div class="contact-us-card-content">
-                  <span class="contact-us-card-title">Phone</span>
+                  <span class="contact-us-card-title">Telefon</span>
                   <span class="contact-us-card-text">+48 57 583 18 10</span>
                 </div>
               </div>
               <div class="contact-us-card">
                 <img
-                  src="./src/img/contact-us-email.png"
+                  src="../src/img/contact-us-email.png"
                   alt=""
                   class="contact-us-card-img"
                 />
                 <div class="contact-us-card-content">
-                  <span class="contact-us-card-title">Email</span>
+                  <span class="contact-us-card-title">E-mail</span>
                   <span class="contact-us-card-text"
                     >ukospedition@ukospedition.com</span
                   >
@@ -99,12 +99,12 @@
               </div>
               <div class="contact-us-card">
                 <img
-                  src="./src/img/contact-us-location.png"
+                  src="../src/img/contact-us-location.png"
                   alt=""
                   class="contact-us-card-img"
                 />
                 <div class="contact-us-card-content">
-                  <span class="contact-us-card-title">Location</span>
+                  <span class="contact-us-card-title">Lokalizacja</span>
                   <span class="contact-us-card-text"
                     >Powstańców 97, 05-870</span
                   >
@@ -266,29 +266,29 @@
                   class="contact-us-textarea"
                   rows="5"
                 ></textarea>
-                <button class="contact-us-btn btn">Send message</button>
+                <button class="contact-us-btn btn">Wyślij wiadomość</button>
               </form>
             </div>
           </div>
         </div>
         <div class="contact-label-container">
           <div class="contact-label-info">
-            <span class="contact-label-text"> Get a Free Quote</span>
+            <span class="contact-label-text"> Uzyskaj bezpłatną wycenę</span>
             <a href="tel:+48575831810" class="contact-label-number"
               >+48 57 583 18 10</a
             >
           </div>
           <img
-            src="./src/img/contact-car-icon.png"
+            src="../src/img/contact-car-icon.png"
             alt=""
             class="contact-label-img"
           />
-          <a href="index.html" class="contact-label-btn">Read more</a>
+          <a href="index.html" class="contact-label-btn">Czytaj więcej</a>
         </div>
       </section>
       <section class="contact-map">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131443.35958691617!2d20.519032283033866!3d52.25434389023395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194c6824f99f37%3A0x4c9008b596eab808!2zUG93c3RhxYRjw7N3IDk3LCAwNS04NzAgQsWCb25pZSwg0J_QvtC70YzRidCw!5e0!3m2!1sen!2sen!4v1738675494529!5m2!1sen!2sen"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131443.35958691617!2d20.519032283033866!3d52.25434389023395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194c6824f99f37%3A0x4c9008b596eab808!2zUG93c3RhxYRjw7N3IDk3LCAwNS04NzAgQsWCb25pZSwg0J_QvtC70YzRidCw!5e0!3m2!1spl2spl!4v1738675494529!5m2!1spl!2spl"
           width="100%"
           height="600"
           style="border: 0"
@@ -302,9 +302,9 @@
       <div class="footer-wrapper">
         <div class="footer-cards">
           <div class="card-footer">
-            <img src="./src/img/location.png" alt="" class="card-footer-img" />
+            <img src="../src/img/location.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Addres</p>
+              <p class="card-footer-category">Adres</p>
               <p class="card-footer-text">
                 Powstańców 97, 05-870<br />
                 Błonie Poland
@@ -312,9 +312,9 @@
             </div>
           </div>
           <div class="card-footer">
-            <img src="./src/img/mobile.png" alt="" class="card-footer-img" />
+            <img src="../src/img/mobile.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Contact</p>
+              <p class="card-footer-category">Kontakt</p>
               <p class="card-footer-text">
                 ukospedition@ukospedition.com <br />
                 +48 57 583 18 10
@@ -322,12 +322,12 @@
             </div>
           </div>
           <div class="card-footer">
-            <img src="./src/img/timing.png" alt="" class="card-footer-img" />
+            <img src="../src/img/timing.png" alt="" class="card-footer-img" />
             <div class="card-footer-content">
-              <p class="card-footer-category">Timing</p>
+              <p class="card-footer-category">Godziny pracy</p>
               <p class="card-footer-text">
-                Mon - Sat: 8 am - 5 pm, <br />
-                Sunday: CLOSED
+                Pon - Sob: 8:00 - 17:00, <br />
+                Niedziela: ZAMKNIĘTE
               </p>
             </div>
           </div>
@@ -335,7 +335,7 @@
         <div class="footer-content">
           <div class="footer-company">
             <a href="" class="footer-logo">
-              <img src="./src/img/Logo.png" alt="" class="footer-logo-img" />
+              <img src="../src/img/Logo.png" alt="" class="footer-logo-img" />
               <span class="footer-logo-text">UKOSpedition</span>
             </a>
             <p class="footer-company-descript">
@@ -343,42 +343,46 @@
               challenges and creating new ones in <br />
               advertising sector. -->
             </p>
-            <a href="about.html" class="footer-compant-btn btn">Read more</a>
+            <a href="about.html" class="footer-compant-btn btn"
+              >Czytaj więcej</a
+            >
           </div>
           <div class="footer-services">
-            <h5 class="footer-section-title">Services</h5>
+            <h5 class="footer-section-title">Usługi</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="about.html" class="footer-list-link"> About Us </a>
+                <a href="about.html" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="career.html" class="footer-list-link">Our Team </a>
+                <a href="career.html" class="footer-list-link">Nasz zespół</a>
               </li>
               <li class="footer-list-item">
-                <a href="#" class="footer-list-link">Contact Us </a>
+                <a href="contact.html" class="footer-list-link"
+                  >Skontaktuj się z nami</a
+                >
               </li>
             </ul>
           </div>
           <div class="footer-links">
-            <h5 class="footer-section-title">Useful Links</h5>
+            <h5 class="footer-section-title">Przydatne linki</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="about.html" class="footer-list-link">About </a>
+                <a href="about.html" class="footer-list-link">O nas</a>
               </li>
               <li class="footer-list-item">
-                <a href="#" class="footer-list-link"> Contact </a>
+                <a href="#" class="footer-list-link">Kontakt</a>
               </li>
 
               <li class="footer-list-item">
-                <a href="services.html" class="footer-list-link">Services </a>
+                <a href="services.html" class="footer-list-link">Usługi</a>
               </li>
             </ul>
           </div>
           <div class="footer-newsletter">
             <h5 class="footer-section-title">Newsletter</h5>
             <p class="footer-newsletter-descript">
-              Subscribe our newsletter to get our latest <br />
-              update & news
+              Zapisz się do naszego newslettera, aby otrzymywać najnowsze <br />
+              aktualizacje i wiadomości
             </p>
             <form action="" class="footer-newsletter-form">
               <input
