--- a/career.html
+++ b/career.html
@@ -56,8 +56,8 @@
           </ul>
         </nav>
         <div class="nav-lang">
-          <a href="" class="nav-lang-link active-lang">EN</a>
-          <a href="" class="nav-lang-link">PL</a>
+          <a href="#" class="nav-lang-link active-lang">EN</a>
+          <a href="PL/career.html" class="nav-lang-link">PL</a>
         </div>
       </div>
     </header>
@@ -217,13 +217,13 @@
             <h5 class="footer-section-title">Services</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-link"> About Us </a>
+                <a href="about.html" class="footer-list-link"> About Us </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Our Team </a>
+                <a href="#" class="footer-list-link">Our Team </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Contact Us </a>
+                <a href="contact.html" class="footer-list-link">Contact Us </a>
               </li>
             </ul>
           </div>
@@ -231,14 +231,14 @@
             <h5 class="footer-section-title">Useful Links</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">About </a>
+                <a href="about.html" class="footer-list-link">About </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link"> Contact </a>
+                <a href="contact.html" class="footer-list-link"> Contact </a>
               </li>
 
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Services </a>
+                <a href="services.html" class="footer-list-link">Services </a>
               </li>
             </ul>
           </div>
