--- a/services.html
+++ b/services.html
@@ -56,8 +56,8 @@
           </ul>
         </nav>
         <div class="nav-lang">
-          <a href="" class="nav-lang-link active-lang">EN</a>
-          <a href="" class="nav-lang-link">PL</a>
+          <a href="#" class="nav-lang-link active-lang">EN</a>
+          <a href="PL/services.html" class="nav-lang-link">PL</a>
         </div>
       </div>
     </header>
@@ -265,13 +265,13 @@
             <h5 class="footer-section-title">Services</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-link"> About Us </a>
+                <a href="about.html" class="footer-list-link"> About Us </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Our Team </a>
+                <a href="career.html" class="footer-list-link">Our Team </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Contact Us </a>
+                <a href="contact.html" class="footer-list-link">Contact Us </a>
               </li>
             </ul>
           </div>
@@ -279,14 +279,14 @@
             <h5 class="footer-section-title">Useful Links</h5>
             <ul class="footer-list">
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">About </a>
+                <a href="about.html" class="footer-list-link">About </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link"> Contact </a>
+                <a href="contact.html" class="footer-list-link"> Contact </a>
               </li>
 
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Services </a>
+                <a href="services.html" class="footer-list-link">Services </a>
               </li>
             </ul>
           </div>
@@ -469,24 +469,6 @@
           </div>
 
           <!-- Row 4: Freight and Load -->
-          <div class="form-row">
-            <div class="form-group">
-              <label for="freight">Freight Type:</label>
-              <select id="freight" name="freight" required>
-                <option value="">Select</option>
-                <option value="type1">Type 1</option>
-                <option value="type2">Type 2</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label for="load">Load:</label>
-              <select id="load" name="load" required>
-                <option value="">Select</option>
-                <option value="load1">Load 1</option>
-                <option value="load2">Load 2</option>
-              </select>
-            </div>
-          </div>
 
           <!-- Row 5: Submit Button -->
           <div class="form-row">
